# quantic_final_project

./: .gitignore  MASTER'S DISSERTATION.md  README.md  add_safety.py  dummy.txt  dummy_jd.txt  fix_mui.py
.github/workflows/: cd.yml  ci.yml  main.yml
deploy/: Caddyfile  HETZNER_DEPLOYMENT.md  cloud-config.yaml  deploy_frontend.sh  docker-compose.prod.yml  launch.sh  setup_server.sh
frontend/src/api/: cv.ts  jobs.ts  matching.ts
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/recruiter/: CandidateDetailsModal.tsx
frontend/src/pages/: LandingPage.tsx
frontend/src/pages/auth/: ForgotPasswordPage.tsx  LoginPage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx
frontend/src/pages/candidate/: CandidateProfile.tsx
frontend/src/pages/recruiter/: CVManagement.tsx  CandidateSearch.tsx  RecruiterChat.tsx  RecruiterJobs.tsx  ShortlistsPage.tsx
frontend/src/store/slices/: jobSlice.ts
services/cv/app/: main.py
services/identity/: seed_admin.py
services/identity/alembic/: env.py
services/identity/app/: main.py
services/identity/app/api/routes/: auth.py
services/identity/tests/api/: conftest.py
services/job/: dummy_jd.docx  pyproject.toml  seed_jobs.py
services/job/app/: main.py
services/job/app/api/routes/: jobs.py  shortlists.py
services/matching/app/api/routes/: matching.py
services/vector/app/api/routes/: search.py
shared/tests/: conftest.py
shared/tests/domain/: test_events.py  test_repository.py
shared/tumaini_shared/infrastructure/messaging/: rabbitmq_bus.py
tests/: test_cv_upload_pipeline.py  test_registration.py
