[project]
name = "job-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "reportlab>=4.2",
  "openpyxl>=3.1",
  "apscheduler>=3.10",
  "pydantic-settings>=2.0",
  "tumaini-shared",
  "pypdf>=4.0.0",
  "python-multipart>=0.0.9",
  "python-docx>=1.1.0",
]

[tool.uv.sources]
tumaini-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
